environment/poc/pocketbase/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketbase-poc
  namespace: poc
  replicas: 1
  selector:
    matchLabels:
      app: pocketbase-poc
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pocketbase-poc
    spec:
      containers:
        - name: pocketbase
          image: verb5/pocketbase:ac7fb3007433
          ports:
            - containerPort: 8090
          resources:
            limits:
              cpu: 500m
              memory: 300Mi
            requests:
              cpu: 200m
              memory: 100Mi
