environment/poc/pocketbase/service.yml
apiVersion: v1
kind: Service
metadata:
    name: pocketbase-svc
    namespace: poc
spec:
    type: ClusterIP
    ports:
    - port: 8090
      targetPort: 8090
    selector:
        app: pocketbase-poc
